--- a/src/app/touchscreen/touchscreen.component.css
+++ b/src/app/touchscreen/touchscreen.component.css
@@ -2,3 +2,80 @@
   height: 100%;
   width: 100%;
 }
+
+.welcome-screen,
+.main-container {
+  height: 100%;
+  width: calc(100% - 140px);
+  position: relative;
+}
+
+.welcome-screen img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#map {
+  height: 100%;
+  width: 100%;
+}
+
+.opaque {
+  background-color: white;
+}
+
+.progress-slider {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.progress-field {
+  background-color: rgba(128, 128, 128, 0.5);
+  margin: 15px;
+  width: 140px;
+  font-size: 175%;
+  text-align: center;
+  cursor: pointer;
+  padding: 50% 0;
+  user-select: none;
+}
+
+.progress-field.selected {
+  background-color: rgba(0, 152, 152, 0.75);
+}
+
+.topic-slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.topic-field {
+  background-color: rgba(128, 128, 128, 0.5);
+  margin: 15px;
+  width: 140px;
+  font-size: 175%;
+  text-align: center;
+  cursor: pointer;
+  padding: 50% 0;
+  user-select: none;
+}
+
+.topic-field.selected {
+  background-color: rgba(0, 152, 152, 0.75);
+}
