--- a/src/app/touchscreen/touchscreen.component.html
+++ b/src/app/touchscreen/touchscreen.component.html
@@ -2,10 +2,20 @@
   <app-map (select)="onSelect($event)"></app-map>
 
   <nav class="topic-slider">
-    <div *ngFor="let topic of topics" [attr.id]="topic" class="topic-field" [class.selected]="selectedTopic === topic" (click)="setTopic(topic)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ topicLabels[topic] }}</div>
+    <div *ngFor="let topic of topics" [attr.id]="topic.name" class="topic-field" [class.selected]="selectedTopic === topic" (click)="setTopic(topic)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ topic.displayName }}</div>
   </nav>
 
   <nav class="progress-slider">
-    <div *ngFor="let status of statuses" [attr.id]="status" class="progress-field" [class.selected]="selectedStatus === status" (click)="setStatus(status)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ statusLabels[status] }}</div>
+    <div *ngFor="let status of statuses" [attr.id]="status.name" class="progress-field" [class.selected]="selectedStatus === status" (click)="setStatus(status)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ status.displayName }}</div>
   </nav>
+
+  <div #layerControl class="layer-control">
+    <span class="nowrap"><span class="heading">Layer ein-/ausblenden</span> <a href="#" (click)="layerControl.collapsed = !layerControl.collapsed">{{ layerControl.collapsed ? 'ausklappen' : 'einklappen' }}</a></span>
+    <ul *ngIf="selectedTopic && !layerControl.collapsed">
+      <li *ngFor="let layer of selectedTopic.layers[selectedStatus.name]"><label><input type="checkbox" [checked]="layer.visible" (change)="toggleLayer(layer)"/> {{ layer.displayName }}</label></li>
+    </ul>
+    <ul *ngIf="!layerControl.collapsed">
+      <li *ngFor="let layer of baseLayers"><label><input type="checkbox" [checked]="layer.visible" (change)="toggleLayer(layer)"/> {{ layer.displayName }}</label></li>
+    </ul>
+  </div>
 </div>
