--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -1,5 +1,15 @@
-<div id="info" (window:storage)="receiveMapEvent($event)">
-
+<div id="info">
+  <div *ngIf="kita">
+    <p>Name: {{kita.name}}</p>
+    <p>Adresse: {{kita.street}} {{kita.address}}</p>
+    <p>Postleitzahl: {{kita.zipCode}}</p>
+    <p>Stadtteil: {{kita.neighborhood}}</p>
+    <p>Tr&auml;ger: {{kita.organisation}}</p>
+    <p>Spitzenverband: {{kita.association}}</p>
+    <p>AnsprechpartnerIn: {{kita.contact}}</p>
+    <p>E-Mail: {{kita.eMail}}</p>
+    <p *ngIf="kita.website"><a href="{{kita.website}}">Weitere Informationen</a></p>
+  </div>
 </div>
 <div id="logo">
   <img src="./assets/HCU.logo.png" />
