Added legend modal to map

--- a/src/app/touchscreen/touchscreen.component.css
+++ b/src/app/touchscreen/touchscreen.component.css
@@ -84,10 +84,13 @@
   background-color: rgba(0, 152, 152, 0.75);
 }
 
-.layer-control {
+.modal-container {
   position: absolute;
   bottom: 0;
   left: 130px;
+}
+
+.modal {
   padding: 10px;
   margin: 15px;
   background-color: rgba(255, 255, 255, 0.9);
@@ -96,14 +99,19 @@
   line-height: 150%;
 }
 
-.layer-control .heading {
+.modal .heading {
   font-size: 130%;
   font-weight: bold;
 }
 
-.layer-control li {
+.modal.layer-control li {
   font-size: 120%;
   list-style: none;
   line-height: 150%;
   user-select: none;
+}
+
+.modal.layer-control .icon-info {
+  height: 16px;
+  vertical-align: text-bottom;
 }
