--- a/src/app/touchscreen/touchscreen.component.html
+++ b/src/app/touchscreen/touchscreen.component.html
@@ -9,13 +9,22 @@
     <div *ngFor="let status of statuses" [attr.id]="status.name" class="progress-field" [class.selected]="selectedStatus === status" (click)="setStatus(status)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ status.displayName }}</div>
   </nav>
 
-  <div #layerControl class="layer-control">
-    <span class="nowrap"><span class="heading">Layer ein-/ausblenden</span> <a href="#" (click)="layerControl.collapsed = !layerControl.collapsed">{{ layerControl.collapsed ? 'ausklappen' : 'einklappen' }}</a></span>
-    <ul *ngIf="selectedTopic && !layerControl.collapsed">
-      <li *ngFor="let layer of selectedTopic.layers"><label><input type="checkbox" [checked]="layer.visible" (change)="toggleLayer(layer)"/> {{ layer.displayName }}</label></li>
-    </ul>
-    <ul *ngIf="!layerControl.collapsed">
-      <li *ngFor="let layer of baseLayers"><label><input type="checkbox" [checked]="layer.visible" (change)="toggleLayer(layer)"/> {{ layer.displayName }}</label></li>
-    </ul>
+  <div class="modal-container">
+    <div *ngIf="mapKeyVisible" class="modal map-key">
+      <span class="nowrap"><span class="heading">Legende</span> <a href="#" (click)="mapKeyVisible = false">{{ 'schließen' }}</a></span>
+      <div>{{ mapKeyLayer.displayName }}:</div>
+      <div *ngIf="mapKeyLayer.legendUrl"><img src="{{ mapKeyLayer.legendUrl }}" /></div>
+      <div *ngIf="!mapKeyLayer.legendUrl">Keine Legende verfügbar</div>
+    </div>
+
+    <div #layerControl class="modal layer-control">
+      <span class="nowrap"><span class="heading">Layer ein-/ausblenden</span> <a href="#" (click)="layerControl.collapsed = !layerControl.collapsed">{{ layerControl.collapsed ? 'ausklappen' : 'einklappen' }}</a></span>
+      <ul *ngIf="selectedTopic && !layerControl.collapsed">
+        <li *ngFor="let layer of selectedTopic.layers"><label><input type="checkbox" [checked]="layer.visible" (change)="toggleLayer(layer)"/> {{ layer.displayName }}</label> <img class="icon-info" src="assets/icon-info.png" (click)="showMapKey(layer)" /></li>
+      </ul>
+      <ul *ngIf="!layerControl.collapsed">
+        <li *ngFor="let layer of baseLayers"><label><input type="checkbox" [checked]="layer.visible" (change)="toggleLayer(layer)"/> {{ layer.displayName }}</label> <img class="icon-info" src="assets/icon-info.png" (click)="showMapKey(layer)" /></li>
+      </ul>
+    </div>
   </div>
 </div>
