--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -1,24 +1,79 @@
-<div id="info">
-  <div *ngIf="kita">
-    <h1>{{kita.name}}</h1>
-    <table>
-      <tr><td>Adresse:</td><td>{{kita.address}}</td></tr>
-      <tr><td>Träger:</td><td>{{kita.organisation}}</td></tr>
-      <tr><td>Spitzenverband:</td><td>{{kita.association}}</td></tr>
-      <tr><td>Leistungen:</td><td>{{kita.services}}</td></tr>
-      <tr><td>Pädagogische Fläche:</td><td>{{kita.paedagogicalArea}} m²</td></tr>
-      <tr><td>Kapazität (Näherungswert):</td><td><strong>{{kita.capacity}} Plätze</strong></td></tr>
-    </table>
+<div class="row infoscreen">
+
+  <div class="col-md-6 col-sm-12">
+    <div class="shadow-element holder-element">
+      <div id="info">
+        <div *ngIf="!kita && !statisticalArea">
+          <h3>Klicken Sie auf ein Kartenelement für weitere Informationen ...</h3>
+        </div>
+        <div *ngIf="kita">
+          <h1>{{kita.name}}</h1>
+          <table>
+            <tr><td>Adresse:</td><td>{{kita.address}}</td></tr>
+            <tr><td>Träger:</td><td>{{kita.organisation}}</td></tr>
+            <tr><td>Spitzenverband:</td><td>{{kita.association}}</td></tr>
+            <tr><td>Leistungen:</td><td>{{kita.services}}</td></tr>
+            <tr><td>Pädagogische Fläche:</td><td>{{kita.paedagogicalArea}} m²</td></tr>
+            <tr><td>Kapazität (Näherungswert):</td><td><strong>{{kita.capacity}} Plätze</strong></td></tr>
+          </table>
+        </div>
+        <div *ngIf="statisticalArea">
+          <h1>Baublock {{statisticalArea.name}}</h1>
+          <table>
+            <tr><td>Einwohner:</td><td>{{statisticalArea.population}}</td></tr>
+            <tr><td>Einwohner (0-6 Jahre):</td><td>{{statisticalArea.population1to6}}</td></tr>
+            <tr><td>Kitas im Radius 500 m:</td><td>{{statisticalArea.kitasIn500m}}</td></tr>
+          </table>
+        </div>
+      </div>
+    </div>
   </div>
-  <div *ngIf="statisticalArea">
-    <h1>Baublock {{statisticalArea.name}}</h1>
-    <table>
-      <tr><td>Einwohner:</td><td>{{statisticalArea.population}}</td></tr>
-      <tr><td>Einwohner (0-6 Jahre):</td><td>{{statisticalArea.population1to6}}</td></tr>
-      <tr><td>Kitas im Radius 500 m:</td><td>{{statisticalArea.kitasIn500m}}</td></tr>
-    </table>
+
+  <div class="col-md-6 col-sm-12">
+    <div class="shadow-element holder-element">
+      <div *ngIf="lineData">
+        <dash-line chartTitle="Geburten der umliegenden Stadtteile"
+                   [series]="lineData"
+                   [chartType]="'line'"
+                   [xCategories]="lineCategories"></dash-line>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-6 col-sm-12">
+    <div class="shadow-element holder-element">
+      <div *ngIf="columnData">
+        <dash-line chartTitle="Anteil der Bevölkerung < 18 Jahren"
+                   [legendEnabled]="false"
+                   [series]="columnData"
+                   [chartType]="'column'"
+                   [xCategories]="columnCategories"></dash-line>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3 col-sm-6">
+    <div class="shadow-element holder-element">
+      <div *ngIf="pieData">
+        <dash-pie chartTitle="Verfahren pro Ebene"
+                  [series]="pieData"></dash-pie>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3 col-sm-6">
+    <div class="shadow-element holder-element">
+      <div *ngIf="pieData">
+        <dash-pie chartTitle="Verfahren pro Ebene"
+                  [series]="pieData"></dash-pie>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-12 col-sm-12">
+    <div id="logo">
+      <img src="./assets/HCU.logo.png" />
+    </div>
   </div>
 </div>
-<div id="logo">
-  <img src="./assets/HCU.logo.png" />
-</div>
+
