Pies sidn WIP - ich kümmere mich um Daten

--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -55,7 +55,7 @@
   <div class="col-md-3 col-sm-6">
     <div class="shadow-element holder-element">
       <div *ngIf="pieData">
-        <dash-pie chartTitle="Verfahren pro Ebene"
+        <dash-pie chartTitle="Work in progress"
                   [series]="pieData"></dash-pie>
       </div>
     </div>
@@ -64,7 +64,7 @@
   <div class="col-md-3 col-sm-6">
     <div class="shadow-element holder-element">
       <div *ngIf="pieData">
-        <dash-pie chartTitle="Verfahren pro Ebene"
+        <dash-pie chartTitle="Work in progress"
                   [series]="pieData"></dash-pie>
       </div>
     </div>
