--- a/src/app/touchscreen/touchscreen.component.html
+++ b/src/app/touchscreen/touchscreen.component.html
@@ -9,8 +9,12 @@
     <div *ngFor="let status of statuses" [attr.id]="status.name" class="progress-field" [class.selected]="selectedStatus === status" (click)="setStatus(status)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ status.displayName }}</div>
   </nav>
 
-  <div class="modal-container">
+  <div class="modal-container-left">
     <app-legend [layer]="mapKeyLayer" [visible]="mapKeyVisible" (close)="mapKeyVisible = false"></app-legend>
     <app-layer-control [layers]="(selectedTopic ? selectedTopic.layers : []).concat(baseLayers)" (toggleLayer)="updateMapLayers()" (showInfo)="showMapKey($event)"></app-layer-control>
+  </div>
+
+  <div class="modal-container-right">
+    <div class="reset-button"><a href="#" (click)="map.reset()">Karte zurücksetzen</a></div>
   </div>
 </div>
