--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -3,8 +3,8 @@
   <div class="col-md-6 col-sm-12">
     <div class="shadow-element holder-element">
       <div id="info">
-        <div *ngIf="!kita && !statisticalArea">
-          <h3>Klicken Sie auf ein Kartenelement für weitere Informationen ...</h3>
+        <div *ngIf="!hasSelectedFeature">
+          <h3>Tippen Sie auf ein Kartenelement für weitere Informationen ...</h3>
         </div>
         <div *ngIf="kita">
           <h1>{{kita.name}}</h1>
@@ -23,6 +23,21 @@
             <tr><td>Einwohner:</td><td>{{statisticalArea.population}}</td></tr>
             <tr><td>Einwohner (0-6 Jahre):</td><td>{{statisticalArea.population1to6}}</td></tr>
             <tr><td>Kitas im Radius 500 m:</td><td>{{statisticalArea.kitasIn500m}}</td></tr>
+          </table>
+        </div>
+        <div *ngIf="supermarket">
+          <h1>{{supermarket.name}}</h1>
+          <table>
+            <tr><td>Betreiber:</td><td>{{supermarket.operator}}</td></tr>
+            <tr><td>Adresse:</td><td>{{supermarket.address}}</td></tr>
+            <tr><td>Barrierefrei:</td><td>{{supermarket.wheelchair | yesNoUnknown}}</td></tr>
+          </table>
+        </div>
+        <div *ngIf="pharmacy">
+          <h1>{{pharmacy.name}}</h1>
+          <table>
+            <tr><td>Adresse:</td><td>{{pharmacy.address}}</td></tr>
+            <tr><td>Barrierefrei:</td><td>{{pharmacy.wheelchair | yesNoUnknown}}</td></tr>
           </table>
         </div>
       </div>
