--- a/src/app/infoscreen/infoscreen.component.css
+++ b/src/app/infoscreen/infoscreen.component.css
@@ -1,3 +1,12 @@
+.infoscreen .start-headline:first-child{
+  margin-top: 100px;
+}
+
+.start-headline {
+  height: 120px;
+  text-align: center;
+}
+
 #info {
   font-size: 24px;
   padding: 20px;
