Data for public space and nurseries

--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -140,7 +140,7 @@
                    [legendEnabled]="false"
                    [series]="columnData"
                    [chartType]="'column'"
-                   [plotLineValue]="16.2"
+                   [plotLineValue]="columnPlotLine"
                    [xCategories]="columnCategories"></dash-line>
       </div>
     </div>
@@ -167,7 +167,7 @@
                    [series]="columnData2"
                    [chartType]="'bar'"
                    [isNoGridLines]="true"
-                   [plotLineValue]="34.1"
+                   [plotLineValue]="column2PlotLine"
                    [xCategories]="columnCategories"></dash-line>
       </div>
     </div>
