--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -5,7 +5,7 @@
 
   <div *ngIf="!isToolStarted"
        class="col-md-12 col-sm-12 start-headline">
-    <h1>Planungstool für soziale Infrastrukturen 'Groß Borstel'</h1>
+    <h1>Planungstool für soziale Infrastrukturen: Groß Borstel</h1>
   </div>
   <div *ngIf="!isToolStarted"
        class="col-md-12 col-sm-12 start-headline">
