--- a/src/app/infoscreen/infoscreen.component.css
+++ b/src/app/infoscreen/infoscreen.component.css
@@ -1,4 +1,13 @@
-.infoscreen .start-headline:first-child{
+.container {
+  max-width: 100%;
+  height: calc(100% - 120px);
+}
+
+.row:first-child {
+  height: 100%;
+}
+
+.start-headline:first-child {
   margin-top: 100px;
 }
 
@@ -8,8 +17,12 @@
 }
 
 #info {
-  font-size: 24px;
+  font-size: 18px;
   padding: 20px;
+}
+
+#info h1 {
+  font-size: 24px;
 }
 
 .info-text {
@@ -17,9 +30,6 @@
 }
 
 #logo {
-  /*position: absolute;*/
-  /*bottom: 0;*/
-  /*left: 0;*/
   background-color: white;
   border: 10px solid white;
 }
@@ -39,4 +49,3 @@
   box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.7);
   margin: 5px;
 }
-
