--- a/src/app/infoscreen/infoscreen.component.css
+++ b/src/app/infoscreen/infoscreen.component.css
@@ -38,6 +38,14 @@
   height: 100px;
 }
 
+#source-footer {
+  height: 25px;
+  width: 100%;
+  text-align: right;
+  padding: 3px;
+  padding-right: 25px;
+}
+
 .holder-element {
   padding: 10px;
 }
