--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -119,6 +119,7 @@
       <div class="shadow-element holder-element">
         <div *ngIf="lineData">
           <dash-line [chartTitle]="lineTitle"
+                     [chartSubTitle]="lineSubTitle"
                      [series]="lineData"
                      [chartType]="'line'"
                      [xCategories]="lineCategories"></dash-line>
@@ -131,6 +132,7 @@
       <div class="shadow-element holder-element">
         <div *ngIf="columnData">
           <dash-line [chartTitle]="columnTitle"
+                     [chartSubTitle]="columnSubTitle"
                      [legendEnabled]="false"
                      [series]="columnData"
                      [chartType]="'column'"
@@ -145,8 +147,10 @@
       <div class="shadow-element holder-element">
         <div *ngIf="pieData">
           <dash-pie [chartTitle]="pieTitle"
+                    [chartSubTitle]="pieSubTitle"
                     [dataLabelDistance]="0"
-                    [isPercentageLabel]="true"
+                    [isPercentageLabel]="false"
+                    [isNoDecimalPlace]="true"
                     [series]="pieData"></dash-pie>
         </div>
       </div>
@@ -157,6 +161,7 @@
       <div class="shadow-element holder-element">
         <div *ngIf="columnData2">
           <dash-line [chartTitle]="column2Title"
+                     [chartSubTitle]="column2SubTitle"
                      [legendEnabled]="false"
                      [series]="columnData2"
                      [chartType]="'bar'"
@@ -165,6 +170,12 @@
                      [xCategories]="columnCategories"></dash-line>
         </div>
       </div>
+    </div>
+
+    <div *ngIf="isToolStarted"
+         id="source-footer"
+         class="col-md-12 col-sm-12">
+        Quellen: Statistikamt Nord: Hamburger Stadtteil-Profile 2012-2016; Statistikamt Nord: Melderegister 31.12.2016, BASFI: Kindertagesstätten in Hamburg.
     </div>
   </div>
 </div>
