--- a/src/app/touchscreen/touchscreen.component.html
+++ b/src/app/touchscreen/touchscreen.component.html
@@ -1,4 +1,4 @@
-<div class="app-container" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)" (removeobject)="onRemoveObject($event)"  (contextmenu)="onContextMenuClick($event)">
+<div class="app-container" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)" (removeobject)="onRemoveObject($event)"  (contextmenu)="onContextMenuClick()">
   <app-map (select)="onSelect($event)"></app-map>
 
   <nav [@menuState]="state" class="topic-slider">
