Improved address parsing

--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -38,7 +38,7 @@
               </tr>
               <tr>
                 <td>Pädagogische Fläche:</td>
-                <td>{{kita.paedagogicalArea}} m²</td>
+                <td>{{kita.paedagogicalArea}}{{kita.paedagogicalArea ? ' m²' : ''}}</td>
               </tr>
               <tr>
                 <td>Kapazität (Näherungswert):</td>
