--- a/src/app/infoscreen/infoscreen.component.html
+++ b/src/app/infoscreen/infoscreen.component.html
@@ -155,10 +155,13 @@
     <div *ngIf="isToolStarted"
          class="col-md-3 col-sm-6">
       <div class="shadow-element holder-element">
-        <div *ngIf="columnData2">
-          <dash-line [chartTitle]="column2Title"
+        <div *ngIf="columnData2" id="line_chart_holder" style="height: 400px; width: 250px">
+          <dash-line style="height: 100%; width: 100%"
+                     [lineId]="'line_chart_holder'"
+                     [chartTitle]="column2Title"
                      [chartSubTitle]="column2SubTitle"
                      [legendEnabled]="false"
+                     [isExport]="false"
                      [series]="columnData2"
                      [chartType]="'bar'"
                      [isNoGridLines]="true"
