Alle Layer können per Config Parmeter in einer Liste angezeigt werden

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,2 +1,3 @@
 <div id="map"></div>
-<div id="popup" class="ol-popup">Test</div>
+<div id="popup" class="ol-popup"
+     [ngClass]="!disableInfoScreen ? 'ol-popup-noshow' : ''">Test</div>
