--- a/src/app/touchscreen/touchscreen.component.html
+++ b/src/app/touchscreen/touchscreen.component.html
@@ -1,15 +1,16 @@
 <div class="app-container" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)" (removeobject)="onRemoveObject($event)" (contextmenu)="onContextMenuClick()">
   <app-map (toolStart)="toggleMenu()" (select)="onSelect($event)"></app-map>
 
-  <nav [@menuState]="state" class="menu-slider topic-slider">
+  <nav *ngIf="!isNoMenus" [@menuState]="state" class="menu-slider topic-slider">
     <div *ngFor="let topic of topics" [attr.id]="topic.name" class="menu-field topic-field" [class.selected]="selectedTopic === topic" (click)="setTopic(topic)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ topic.displayName }}</div>
   </nav>
 
-  <nav [@menuState]="state" class="menu-slider progress-slider">
+  <nav *ngIf="!isNoMenus" [@menuState]="state" class="menu-slider progress-slider">
     <div *ngFor="let stage of stages" [attr.id]="stage.name" class="menu-field progress-field" [class.selected]="selectedStage === stage" (click)="setStage(stage)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ stage.displayName }}</div>
   </nav>
 
-  <div [@menuState]="state" class="modal-container-left">
+  <div [@menuState]="state" class="modal-container-left"
+       [ngClass]="isNoMenus ? 'modal-container-left-nomenu' : ''">
     <app-legend [layer]="mapKeyLayer" [visible]="mapKeyVisible" (close)="mapKeyVisible = false"></app-legend>
     <app-layer-control [layers]="layers" (toggleLayer)="updateMapLayers()" (showInfo)="showMapKey($event)"></app-layer-control>
   </div>
