proj4 lib entfernt, style des reset buttons

--- a/src/app/touchscreen/touchscreen.component.css
+++ b/src/app/touchscreen/touchscreen.component.css
@@ -90,6 +90,10 @@
   right: 130px;
 }
 
+.modal-container-right-nomenu {
+  right: 0 !important;
+}
+
 .reset-button {
   background-color: rgba(255, 255, 255, 0.75);
   padding: 10px;
