--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,10 @@
 }
 
 body {
-  font: 13px Helvetica, Arial;
+  /*font: 13px Helvetica, Arial;*/
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #212529;
+
   overflow: hidden;
 }
 
