--- a/src/app/infoscreen/infoscreen.component.css
+++ b/src/app/infoscreen/infoscreen.component.css
@@ -3,6 +3,11 @@
   height: calc(100% - 120px);
 }
 
+#infoscreen-row > div {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
 .row:first-child {
   height: 100%;
 }
@@ -52,9 +57,9 @@
 
 .shadow-element {
   background-color: white;
-  -webkit-box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.7);
-  -moz-box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.7);
-  box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
   margin: 5px;
 }
 
