--- a/src/app/map/layer-control/layer-control.component.html
+++ b/src/app/map/layer-control/layer-control.component.html
@@ -1,5 +1,10 @@
 <div class="layer-control">
-  <span class="nowrap"><span class="heading">Layer ein-/ausblenden</span> <a href="#" (click)="collapsed = !collapsed">{{ collapsed ? 'ausklappen' : 'einklappen' }}</a></span>
+  <span class="nowrap"><span class="heading" i18n>Show/hide layers</span>
+  <a href="#" (click)="collapsed = !collapsed">
+    <ng-container *ngIf="collapsed" i18n>expand</ng-container>
+    <ng-container *ngIf="!collapsed" i18n>collapse</ng-container>
+  </a>
+</span>
   <ul *ngIf="!collapsed">
     <li *ngFor="let layer of layers"><label><input type="checkbox" [checked]="layer.visible" (change)="onToggleLayer(layer)"/> {{ layer.displayName }}</label> <img class="icon-info" src="assets/icon-info.png" (click)="onShowInfo(layer)" /></li>
   </ul>
