--- a/src/app/touchscreen/touchscreen.component.html
+++ b/src/app/touchscreen/touchscreen.component.html
@@ -1,12 +1,12 @@
-<div class="app-container" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)" (removeobject)="onRemoveObject($event)" (contextmenu)="onContextMenuClick()">
+<div class="app-container" (contextmenu)="onContextMenuClick()">
   <app-map (toolStart)="toggleMenu()" (select)="onSelect($event)"></app-map>
 
   <nav *ngIf="!isNoMenus" [@menuState]="state" class="menu-slider topic-slider">
-    <div *ngFor="let topic of topics" [attr.id]="topic.name" class="menu-field topic-field" [class.selected]="selectedTopic === topic" (click)="setTopic(topic)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ topic.displayName }}</div>
+    <div *ngFor="let topic of topics" [attr.id]="topic.name" class="menu-field topic-field" [class.selected]="selectedTopic === topic" (click)="setTopic(topic)">{{ topic.displayName }}</div>
   </nav>
 
   <nav *ngIf="!isNoMenus" [@menuState]="state" class="menu-slider progress-slider">
-    <div *ngFor="let stage of stages" [attr.id]="stage.name" class="menu-field progress-field" [class.selected]="selectedStage === stage" (click)="setStage(stage)" (addobject)="onUpdateObject($event)" (updateobject)="onUpdateObject($event)">{{ stage.displayName }}</div>
+    <div *ngFor="let stage of stages" [attr.id]="stage.name" class="menu-field progress-field" [class.selected]="selectedStage === stage" (click)="setStage(stage)">{{ stage.displayName }}</div>
   </nav>
 
   <div [@menuState]="state" class="modal-container-left"
